@@ -1341,6 +1341,7 @@ TESTS+=	tests/explain_+ctor-error.test \
 	tests/explain_frri_v-c++03.test \
 	tests/explain_fsf_v.test \
 	tests/explain_nrfi_v-c++-error.test \
+	tests/explain_p_typedef_ri.test \
 	tests/explain_pcf_i.test \
 	tests/explain_pmri.test \
 	tests/explain_pri.test \
